fix image preview on safari -- FUCK SAFARI!!!!

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2017,33 +2017,6 @@ html {
   --tw-text-opacity: 0.2;
 }
 
-.stack {
-  display: inline-grid;
-  place-items: center;
-  align-items: flex-end;
-}
-
-.stack > * {
-  grid-column-start: 1;
-  grid-row-start: 1;
-  transform: translateY(1rem) scale(0.9);
-  z-index: 1;
-  width: 100%;
-  opacity: 0.6;
-}
-
-.stack > *:nth-child(2) {
-  transform: translateY(0.5rem) scale(0.95);
-  z-index: 2;
-  opacity: 0.8;
-}
-
-.stack > *:nth-child(1) {
-  transform: translateY(0) scale(1);
-  z-index: 3;
-  opacity: 1;
-}
-
 .textarea {
   flex-shrink: 1;
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -3014,6 +2987,10 @@ html {
   height: 7rem;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -3038,10 +3015,6 @@ html {
   height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
-}
-
-.h-auto {
-  height: auto;
 }
 
 .max-h-\[360px\] {
